[package]
name = "txprocessor"
version = "0.1.0"
authors = ["Dor <commo64dor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
csv = "1.1.6"
serde = "1.0.137"
serde_derive = "1.0.137"
strum = "0.24"
strum_macros = "0.24"
rusqlite = "0.27.0"
